maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:38: error: object plm.universe.Direction is not a value
    dir = Direction
          ^